# cxx-skeleton

./: CMakeLists.txt
include/foo/: bar.hpp
src/: foo.cpp
tests/: CMakeLists.txt  foo.test.cpp
